added game titles

--- a/index.html
+++ b/index.html
@@ -44,24 +44,27 @@
     <!-- Page Content -->
     <div class="container">
 
+
+    <br>
+
         
         <!-- /.row -->
 
         <div class="row">
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #1</h2>
-                <p>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
+                <img class="img-circle img-responsive img-center" src="images/mountains.png" alt="">
+                <h2>Yeti Skii Game</h2>
+                <p>Play this zany game where you run away from a yeti!</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #2</h2>
-                <p>The images are set to be circular and responsive. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <img class="img-circle img-responsive img-center" src="images/traffic.png" alt="">
+                <h2>Frogger Game</h2>
+                <p>Play as a tiny frog with a big attitude!</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #3</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <img class="img-circle img-responsive img-center" src="images/tree.png" alt="">
+                <h2>Tetris</h2>
+                <p>This classic game will teach you the basics of building!</p>
             </div>
         </div>
         <!-- /.row -->
