--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <img class="img-circle img-responsive img-center" src="images/mountains.png" alt="">
-                <h2>Yeti Skii Game</h2>
+                <h2>Yeti Ski Game</h2>
                 <p>Play this zany game where you run away from a yeti!</p>
             </div>
             <div class="col-sm-4">
@@ -75,7 +75,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Centennial Charger 2017</p>
                 </div>
             </div>
             <!-- /.row -->
