fixed title errors for games

--- a/yeti.html
+++ b/yeti.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Centennial Charge</title>
+    <title>Yeti Ski Game</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -50,23 +50,9 @@
         
         <!-- /.row -->
 
-        <div class="row">
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/mountains.png" alt="">
-                <h2>Yeti Ski Game</h2>
-                <p>Play this zany game where you run away from a yeti!</p>
-            </div>
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/traffic.png" alt="">
-                <h2>Frogger Game</h2>
-                <p>Play as a tiny frog with a big attitude as he crosses traffic!</p>
-            </div>
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/tree.png" alt="">
-                <h2>Tetris</h2>
-                <p>This classic game will teach you the basics of building!</p>
-            </div>
-        </div>
+        <row>
+
+        </row>
         <!-- /.row -->
 
         <hr>
