--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/mountains.png" alt="">
+                <img class="img-circle img-responsive img-center" src="images/ski.png" alt="">
                 <h2>Yeti Ski Game</h2>
                 <p>Play this zany game where you run away from a yeti!</p>
             </div>
