added tetris and frogger image

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 <p>Play this zany game where you run away from a yeti!</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/traffic.png" alt="">
+                <img class="img-circle img-responsive img-center" src="images/frogger.png" alt="">
                 <h2>Frogger Game</h2>
                 <p>Play as a tiny frog with a big attitude as he crosses traffic!</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/tree.png" alt="">
+                <img class="img-circle img-responsive img-center" src="images/tetris.png" alt="">
                 <h2>Tetris</h2>
                 <p>This classic game will teach you the basics of building!</p>
             </div>
