added colors for text and centered game names

--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
         
         <!-- /.row -->
 
-        <div class="row">
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="images/ski.png" alt="">
-                <h2>Yeti Ski Game</h2>
-                <p>Play this zany game where you run away from a yeti!</p>
-            </div>
+        <div class="row" style="color: white">
             <div class="col-sm-4">
                 <img class="img-circle img-responsive img-center" src="images/frogger.png" alt="">
-                <h2>Frogger Game</h2>
+                <h2 class="gameName">Frogger Game</h2>
                 <p>Play as a tiny frog with a big attitude as he crosses traffic!</p>
             </div>
             <div class="col-sm-4">
+                <img class="img-circle img-responsive img-center" src="images/ski.png" alt="">
+                <h2 class="gameName">Yeti Ski Game</h2>
+                <p>Play this zany game where you run away from a yeti!</p>
+            </div>
+            <div class="col-sm-4">
                 <img class="img-circle img-responsive img-center" src="images/tetris.png" alt="">
-                <h2>Tetris</h2>
+                <h2 class="gameName">Tetris</h2>
                 <p>This classic game will teach you the basics of building!</p>
             </div>
         </div>
@@ -73,7 +73,7 @@
 
         <!-- Footer -->
         <footer>
-            <div class="row">
+            <div class="row" style="color: white">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Centennial Charge 2017</p>
                 </div>
