--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-
         <!-- Footer -->
         <footer>
-            <div class="row" style="color: white">
+            <div class="row" style="color: white;">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Centennial Charge 2017</p>
                 </div>
